V3960: Fixes for first realese CompList

--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P020.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P020.xaml
@@ -88,10 +88,10 @@
         </Labels:Pipe>
         <Labels:Pipe Width="116" StatusComponent="024-01-MA1" PipeHeight="Medium" Canvas.Left="415" Canvas.Top="574" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="131" StatusComponent="022-01-MA1" PipeHeight="Medium" Canvas.Left="560" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1057" Canvas.Top="132" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="1057" Canvas.Top="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="89" VerticalAlignment="Center" Canvas.Top="809" StatusComponent="029-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="124" HorizontalAlignment="Left" Color="Air"/>
-        <Labels:Pipe Width="94" VerticalAlignment="Center" Canvas.Top="806" StatusComponent="029-01-MA1" PipeHeight="Medium" Canvas.Left="259" HorizontalAlignment="Left" />
-        <Labels:Pipe Width="372" Canvas.Top="806" StatusComponent="028-01-MA1" PipeHeight="Medium" Canvas.Left="476" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="265" VerticalAlignment="Center" Canvas.Top="806" StatusComponent="029-01-MA1" PipeHeight="Medium" Canvas.Left="259" HorizontalAlignment="Left" />
+        <Labels:Pipe Width="202" Canvas.Top="806" StatusComponent="028-01-MA1" PipeHeight="Medium" Canvas.Left="646" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="80" StatusComponent="026-01-MA1" PipeHeight="Medium" Canvas.Left="226" Canvas.Top="675" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="133" VerticalAlignment="Top" Canvas.Top="737" StatusComponent="026-01-MA1" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="163" HorizontalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -103,7 +103,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="020-23-CV1" PipeHeight="Medium" Canvas.Left="352" Canvas.Top="327"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="85" StatusComponent="020-22-CV1" PipeHeight="Medium" Canvas.Left="352" Canvas.Top="327"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="168" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="194" Canvas.Top="230">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -257,7 +257,7 @@
         </Machines:V01_ALV_VibratingFeeder>
         <Machines:V01_ScarpaTrasporto Canvas.Left="192" Canvas.Top="772" Height="51" Width="81" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VRR_DryTrommel Canvas.Left="863" Canvas.Top="72" Height="122" Width="201" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="343" Canvas.Top="801" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="513" Canvas.Top="801" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="1305" Canvas.Top="172" Height="103" Width="184" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ALV_VibratingFeeder Canvas.Left="1249" Canvas.Top="323" Height="103" Width="184" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:V01_ALV_VibratingFeeder.RenderTransform>
@@ -312,12 +312,12 @@
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="126" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="32" Canvas.Top="405"/>
         <Labels:DetailsLabel ComponentName="024-LUB" DetailsPageName="D024" Canvas.Left="613" Canvas.Top="471" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="028-01-MA1" Canvas.Left="434" Canvas.Top="741" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="970" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="353" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="028-01-MA1" Canvas.Left="601" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="864" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="024-01-MA1" Canvas.Left="370" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="024-41-LT1" Canvas.Left="730" Canvas.Top="540" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1307" Canvas.Top="717" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="032-01-MA1" Canvas.Left="1156" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="098-01-MA1" Canvas.Left="1325" Canvas.Top="717" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="032-01-MA1" Canvas.Left="1179" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="018-01-MA1" Canvas.Left="233" Canvas.Top="85"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="025-01-MA1" Canvas.Left="542" Canvas.Top="163"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="020-41-LT1" Canvas.Left="119" Canvas.Top="257"/>
@@ -325,14 +325,14 @@
         <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="94" Canvas.Top="405" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="026-01-MA1" Canvas.Left="304" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel VerticalAlignment="Center" Canvas.Top="730" Canvas.Left="74" HorizontalAlignment="Left" ComponentName="029-01-MA1"/>
-        <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="1076" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="970" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="62" Canvas.Top="472" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="018-01-YA1" Canvas.Left="337" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="024-01-YA1" Canvas.Left="457" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="024-01-YA1" Canvas.Left="479" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="033-01-MA1" Canvas.Left="1352" Canvas.Top="229" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="035-01-EC1" Canvas.Left="1206" Canvas.Top="319" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="045-01-EC1" Canvas.Left="1156" Canvas.Top="461" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="094-01-MA1" Canvas.Left="970" Canvas.Top="596" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1144" Canvas.Top="660" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="094-01-MA1" Canvas.Left="980" Canvas.Top="596" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="096-01-MA1" Canvas.Left="1156" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
