--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P849.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P849.xaml
@@ -7,7 +7,7 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             x:Class="Prevu.Synoptics.P810" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P849" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
         <Labels:Pipe Width="246" StatusComponent="870-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="482" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top" />
@@ -95,7 +95,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="251" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Color="ByProduct" Canvas.Left="337" Canvas.Top="263" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="192" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Color="ByProduct" Canvas.Left="396" Canvas.Top="263" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="850-01-MA1" PipeHeight="Medium" Canvas.Left="562" Canvas.Top="221" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -139,7 +139,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="252" RenderTransformOrigin="0.5,0.5" StatusComponent="864-01-MA1" Color="ByProduct" Canvas.Left="841" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="358" RenderTransformOrigin="0.5,0.5" StatusComponent="864-01-MA1" Color="ByProduct" Canvas.Left="841" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="860-01-MA1" PipeHeight="Medium" Canvas.Left="783" Canvas.Top="222" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -196,7 +196,7 @@
         <Labels:DeviceLabel ComponentName="874-01-MA1" Canvas.Left="1172" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="868-01-MA1" Canvas.Left="551" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="870-01-MA1" Canvas.Left="772" Canvas.Top="565" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Color="ByProduct" Width="67" RenderTransformOrigin="0.5,0.5" StatusComponent="873-01-MA1" Canvas.Left="306" Canvas.Top="294" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Color="ByProduct" Width="215" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="1098" Canvas.Top="242" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -206,9 +206,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_BBF_SingleBag Canvas.Left="289" Canvas.Top="304" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="854-71-ECS2" Canvas.Left="294" Canvas.Top="409" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="873-01-MA1" Canvas.Left="1058" Canvas.Top="295" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Color="ByProduct" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="864-01-MA1" Canvas.Left="1149" Canvas.Top="310" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -218,19 +216,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_BBF_SingleBag Canvas.Left="1041" Canvas.Top="305" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="864-71-ECS2" Canvas.Left="1045" Canvas.Top="410" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Rectangle Height="4" Stroke="Black" Width="89" Canvas.Left="293" Canvas.Top="284" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="258" Canvas.Top="256" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
+        <Machines:V01_BBF_SingleBag Canvas.Left="1151" Canvas.Top="335" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="864-71-ECS2" Canvas.Left="1155" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Rectangle Height="4" Stroke="Black" Width="89" Canvas.Left="434" Canvas.Top="630" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="399" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Machines:External.RenderTransform>
@@ -242,8 +229,8 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Rectangle Height="4" Stroke="Black" Width="88" Canvas.Left="1046" Canvas.Top="287" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1122" Canvas.Top="259" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Rectangle Height="4" Stroke="Black" Width="88" Canvas.Left="1156" Canvas.Top="317" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1232" Canvas.Top="289" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -256,5 +243,72 @@
         <Rectangle Height="65" Stroke="Black" Width="3" Canvas.Left="438" Canvas.Top="22" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="412" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="849-71-ECS2" Canvas.Left="299" Canvas.Top="30" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:Pipe Color="ByProduct" Width="129" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Canvas.Left="334" Canvas.Top="200" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="191" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Color="ByProduct" Canvas.Left="396" Canvas.Top="137" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="200" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Color="ByProduct" Canvas.Left="607" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="382" RenderTransformOrigin="0.5,0.5" StatusComponent="854-01-MA1" Color="ByProduct" Canvas.Left="826" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock Canvas.Top="376" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1269" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock Canvas.Top="425" Text="{lex:Loc Bag Station P}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1269" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1200" Canvas.Top="417" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1257" Canvas.Top="360" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1257" Canvas.Top="474" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1466" Canvas.Top="417" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <TextBlock Canvas.Top="688" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="549" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock Canvas.Top="737" Text="{lex:Loc Bag Station O}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="549" FontSize="26" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="480" Canvas.Top="729" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="537" Canvas.Top="672" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="537" Canvas.Top="786" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="746" Canvas.Top="729" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <TextBlock Canvas.Top="106" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="72" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <TextBlock Canvas.Top="155" Text="{lex:Loc Silos}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="72" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="3" Canvas.Top="147" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="60" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="60" Canvas.Top="204" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="269" Canvas.Top="147" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
     </Canvas>
 </UserControl>
