--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P940.xaml
@@ -10,8 +10,8 @@
              x:Class="Prevu.Synoptics.P940" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="206" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="978" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="288" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="1151" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="978" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="379" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="1151" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Canvas.Left="1049" Canvas.Top="738" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="955-01-MA1" Canvas.Left="1091" Canvas.Top="703" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
@@ -34,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="150" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1107" Canvas.Top="436" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="126" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1036" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -44,8 +44,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="105" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Color="ByProduct" Canvas.Left="1180" Canvas.Top="363" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="1250" Canvas.Top="394" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Color="ByProduct" Canvas.Left="1097" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="1147" Canvas.Top="418" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -55,7 +55,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="630" StatusComponent="957-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1122" Canvas.Top="424" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="632" StatusComponent="957-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1212" Canvas.Top="424" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -235,7 +235,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="618" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="821" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="709" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="821" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="12" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="776" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -273,9 +273,9 @@
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1005" Canvas.Top="715" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="1097" Canvas.Top="631" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="1090" Canvas.Top="705" Height="46" Width="72" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_BBF_SingleBag Canvas.Left="1233" Canvas.Top="404" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle Height="4" Stroke="Black" Width="88" Canvas.Left="1238" Canvas.Top="386" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1314" Canvas.Top="358" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:V01_BBF_SingleBag Canvas.Left="1130" Canvas.Top="429" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="4" Stroke="Black" Width="88" Canvas.Left="1135" Canvas.Top="411" RenderTransformOrigin="0.5,0.5" StrokeThickness="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="1211" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -318,7 +318,25 @@
         <Labels:DeviceLabel ComponentName="964-01-MA1" Canvas.Left="434" Canvas.Top="613" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="957-01-MA1" Canvas.Left="985" Canvas.Top="661" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="955-01-MA1" Canvas.Left="1159" Canvas.Top="631" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="950-71-ECS2" Canvas.Left="1237" Canvas.Top="509" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel ComponentName="950-71-ECS2" Canvas.Left="1134" Canvas.Top="534" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <TextBlock Canvas.Top="462" Text="3rd party, who?" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1250" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock Canvas.Top="511" Text="{lex:Loc Bag Station N}" TextWrapping="Wrap" TextAlignment="Right" Opacity="0.7" Canvas.Left="1250" FontSize="26" Foreground="White" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1181" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1238" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="268" Canvas.Left="1238" Canvas.Top="560" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="116" Canvas.Left="1447" Canvas.Top="503" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Misc:DashedLine.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Misc:DashedLine.RenderTransform>
+        </Misc:DashedLine>
 
     </Canvas>
 </UserControl>
